--- a/NeuroNetwork/NeuroNetwork.vcxproj
+++ b/NeuroNetwork/NeuroNetwork.vcxproj
@@ -146,7 +146,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="MyNeuroNetwork.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyNeuroNetwork.h" />
+    <ClInclude Include="TypeDefines.h" />
+    <ClInclude Include="NeuronState.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
